# geese

./: .perms-test  .yamllint  Cargo.toml  DESIGN.md  LICENSE  README.md  _drop_me_will_be_overwritten.txt  config.example.yml
.github/workflows/: ci.yml  yamllint.yml
crates/geese/: Cargo.toml
crates/geese-client/: Cargo.toml
crates/geese-client/src/: lib.rs
crates/geese-client/tests/: integration.rs
crates/geese/src/: config.rs  error.rs  lib.rs  main.rs  profile.rs  storage.rs
crates/geese/tests/: cli.rs
crates/geesed/: Cargo.toml  README.md
crates/geesed/src/: lib.rs  main.rs  processes.rs
crates/geesed/tests/: acp_socket.rs  control_socket.rs  cwd_config.rs  goosed_lifecycle.rs  lockfile.rs  profile_crud.rs  shutdown.rs
crates/geesed/tests/fixtures/: mock_goose.rs  mock_goose_exit.rs
docs/: README.md  cosmic.md  geesed.md  goose-acp-scoping.md  hyprland.md  kwin.md  sway.md
src/: cli.rs  config.rs  launcher.rs  main.rs  paths.rs  stacker.rs
tests/: config_test.rs  stacker_test.rs
