[package]
name = "geese"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Launch multiple isolated Goose desktop instances with distinct Wayland app_ids"
repository = "https://github.com/phlax/geese"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
dirs = "5"
which = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
tempfile = "3"
