[workspace]
members = ["crates/geese", "crates/geese-client", "crates/geesed"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
assert_cmd = "2.0"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
fs2 = "0.4"
nix = { version = "0.29", features = ["signal", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
