[package]
name = "geese-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
nix.workspace = true
