[package]
name = "geese-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
nix.workspace = true
# Scope-guarded env mutator for `tests/integration.rs`. Replaces the
# `unsafe { std::env::set_var }` shape and lets the integration tests
# drop their hand-rolled `ENV_LOCK` Mutex.
temp-env.workspace = true

[lints]
workspace = true
